- updated unit tests - updated README.md